--- a/public/Testing-page.html
+++ b/public/Testing-page.html
@@ -34,7 +34,7 @@
             width: 80%; 
             text-align: center; 
         }
-        #nextPage, #winPage, #stopMovement {
+        #nextPage, #winPage, #stopMovement, #increaseSpeed {
             background-color: #4CAF50; 
             color: white; 
             border: none; 
@@ -42,7 +42,7 @@
             cursor: pointer; 
             font-size: 16px; 
         }
-        #nextPage:hover, #winPage:hover, #stopMovement:hover {
+        #nextPage:hover, #winPage:hover, #stopMovement:hover, #increaseSpeed:hover {
             background-color: #45a049; 
         }
         /* myImage4 styles */
@@ -87,9 +87,10 @@
         // Global movement flags
         let moveImg1 = { left: false, up: false, right: false, down: false };
         let movingEnemy = true; // Flag to control movement of myImage2 and myImage3
-
+        
         // Speed for movement
-        const speed = 5;
+        let speed = 5; // Initial speed of myImage1
+        const speedIncreaseAmount = 2; // Amount to increase speed
 
         // Function to check if two elements are colliding
         function myHitOther(my1, my2) {
@@ -132,12 +133,12 @@
 
             // Only move enemy images if movingEnemy is true
             if (movingEnemy) {
-                // Calculate distance between img1 and img2
+                // Calculate and move myImg02 and myImg03
+                // (Same logic as before)
+                
                 const deltaX2 = parseInt(img1.style.left) - parseInt(img2.style.left);
                 const deltaY2 = parseInt(img1.style.top) - parseInt(img2.style.top);
                 const distance2 = Math.sqrt(deltaX2 * deltaX2 + deltaY2 * deltaY2);
-
-                // Move myImg02 (Charizard) towards myImg01 (Greninja)
                 if (distance2 > 0) {
                     const moveX2 = (deltaX2 / distance2) * speed; 
                     const moveY2 = (deltaY2 / distance2) * speed; 
@@ -146,12 +147,9 @@
                     img2.style.top = (parseInt(img2.style.top) + (moveY2 > 0 ? Math.min(moveY2, speed) : Math.max(moveY2, -speed))) + 'px';
                 }
 
-                // Calculate distance between img1 and img3
                 const deltaX3 = parseInt(img1.style.left) - parseInt(img3.style.left);
                 const deltaY3 = parseInt(img1.style.top) - parseInt(img3.style.top);
                 const distance3 = Math.sqrt(deltaX3 * deltaX3 + deltaY3 * deltaY3);
-
-                // Move myImg03 (New Chaser) towards myImg01 (Greninja)
                 if (distance3 > 0) {
                     const moveX3 = (deltaX3 / distance3) * speed;
                     const moveY3 = (deltaY3 / distance3) * speed;
@@ -225,6 +223,12 @@
             movingEnemy = false; // Disable enemy movement
         }
 
+        // Increase speed of myImage1
+        function increaseSpeed() {
+            speed += speedIncreaseAmount; // Increase the speed
+            alert(`Current speed: ${speed}`); // Display the current speed
+        }
+
         // Close modal when clicking outside of it
         window.onclick = function(event) {
             const lossModal = document.getElementById('lossModal');
@@ -257,8 +261,8 @@
     <!-- New white box as myImage4 -->
     <div id="myImage4"></div> <!-- Win area as myImage4 -->
 
-    <input type="button" id="autoBackgroundButton" value="Start Background Movement" onclick="toggleBackgroundMovement()">
     <input type="button" id="stopMovement" value="Stop Enemy Movement" onclick="stopEnemyMovement()">
+    <input type="button" id="increaseSpeed" value="Increase Speed" onclick="increaseSpeed()"> <!-- New speed increase button -->
 
     <input type="button" value="Image Right Fast Button" onTouchStart="{this.click(); event.preventDefault();}" onclick="{
         document.getElementById('myImg01').style.left = parseInt(document.getElementById('myImg01').style.left) + 10 + 'px';
