--- a/public/Testing-page.html
+++ b/public/Testing-page.html
@@ -231,6 +231,7 @@
     <img id="myImg01" style="position:absolute; width:100px; height:80px; top:0px; left:50px;" src="https://i.ibb.co/NtcGP2L/greninja.jpg" alt="Greninja">
     <img id="myImg02" style="position:absolute; width:100px; height:80px; top:0px; left:0px;" src="https://i.ibb.co/b612Tcx/charizard.jpg" alt="Charizard">
     <img id="myImg03" style="position:absolute; width:100px; height:80px; top:0px; left:0px;" src="https://i.ibb.co/b612Tcx/charizard.jpg" alt="New Chaser">
+    <img id="myImg04" style="position:absolute; width:100px; height:80px; top:0px; left:0px;" src="<a href="https://imgbb.com/"><img src="https://i.ibb.co/jGjGZSf/OIP-5.jpg" alt="OIP-5" border="0"></a>" alt="New Chaser">
 
     <div id="myImage4"></div> <!-- Win area as myImage4 -->
 
