--- a/public/Testing-page.html
+++ b/public/Testing-page.html
@@ -111,7 +111,10 @@
 
             // Check for collision with the new image (myImage4)
             if (myHitOther('myImg01', 'myImage4')) {
+                console.log("Greninja has collided with myImage4."); // Debugging line
                 showWinModal(); // Show the win modal when Greninja hits myImage4
+            } else {
+                console.log("No collision with myImage4."); // Debugging line
             }
         }
 
