--- a/public/Testing-page.html
+++ b/public/Testing-page.html
@@ -102,7 +102,7 @@
             return (right1 >= left2 && bottom1 >= top2 && left1 <= right2 && top1 <= bottom2);
         }
 
-        // Function to check for collisions
+     <br>   // Function to check for collisions
         function myCheckHit() {
             // Check for Greninja hitting the enemies
             if (myHitOther('myImg01', 'myImg02') || myHitOther('myImg01', 'myImg03')) {
@@ -114,8 +114,7 @@
             if (myHitOther('myImg01', 'myImage4')) {
                 console.log("Greninja has collided with myImage4."); // Debugging line
                 showWinModal(); // Show the win modal when Greninja hits myImage4
-        
-        }
+             } <br>
 
         // Move images based on movement flags
         function moveImages() {
