--- a/public/Testing-page.html
+++ b/public/Testing-page.html
@@ -109,7 +109,7 @@
                 showLossModal();
                 document.getElementById('myImg01').style.left = '20px';
             }
-
+          function myCheckHit() {
             // Check for collision with the new image (myImage4)
             if (myHitOther('myImg01', 'myImage4')) {
                 console.log("Greninja has collided with myImage4."); // Debugging line
