--- a/public/Testing-page.html
+++ b/public/Testing-page.html
@@ -238,15 +238,15 @@
             img3.style.top = (Math.random() * (window.innerHeight - parseInt(img3.style.height))) + 'px'; // Random vertical position
             
             const img4 = document.getElementById('myImg04');
-            img4.style.left = (Math.random() * (window.innerWidth - parseInt(img4.style.width))) + 'px'; // Random horizontal position
-            img4.style.top = (Math.random() * (window.innerHeight - parseInt(img4.style.height))) + 'px'; // Random vertical position 
+            img4.style.left = (window.innerWidth - parseInt(img4.style.width) - 20) + 'px'; // Align to the right
+            img4.style.top = (window.innerHeight / 2 - parseInt(img4.style.height) / 2) + 'px'; // Center vertically
         };
     </script>
 
     <img id="myImg01" style="position:absolute; width:100px; height:80px; top:0px; left:50px;" src="https://i.ibb.co/NtcGP2L/greninja.jpg" alt="Greninja">
     <img id="myImg02" style="position:absolute; width:100px; height:80px; top:0px; left:0px;" src="https://i.ibb.co/b612Tcx/charizard.jpg" alt="Charizard">
     <img id="myImg03" style="position:absolute; width:100px; height:80px; top:0px; left:0px;" src="https://i.ibb.co/b612Tcx/charizard.jpg" alt="Charizard">
-    <img id="myImg04" style="position:absolute; width:100px; height:80px; top:0px; left:0px;" src="https://i.ibb.co/2nKPFNQ/coin.jpg" alt="Coin">
+    <img id="myImg04" style="position:absolute; width:100px; height:80px; top:0px; left:0px;" src="https://i.ibb.co/2nKPFNQ/coin.png" alt="Coin">
 
     <input type="button" id="stopMovement" class="button" value="Stop Enemy Movement" onclick="stopEnemyMovement()">
     <input type="button" id="increaseSpeed" class="button" value="Increase Speed" onclick="increaseSpeed()">
