--- a/public/Testing-page.html
+++ b/public/Testing-page.html
@@ -246,7 +246,7 @@
     <img id="myImg01" style="position:absolute; width:100px; height:80px; top:0px; left:50px;" src="https://i.ibb.co/NtcGP2L/greninja.jpg" alt="Greninja">
     <img id="myImg02" style="position:absolute; width:100px; height:80px; top:0px; left:0px;" src="https://i.ibb.co/b612Tcx/charizard.jpg" alt="Charizard">
     <img id="myImg03" style="position:absolute; width:100px; height:80px; top:0px; left:0px;" src="https://i.ibb.co/b612Tcx/charizard.jpg" alt="Charizard">
-    <img id="myImg04" style="position:absolute; width:100px; height:80px; top:0px; left:0px;" src="https://i.ibb.co/1J0GQ2Y/coin.png" alt="Coin"> <!-- Updated image source -->
+    <img id="myImg04" style="position:absolute; width:100px; height:80px; top:0px; left:0px;" src="https://i.ibb.co/WDXHg9m/OIP-5.jpg" alt="OIP-5"> <!-- Updated to the new image source -->
 
     <input type="button" id="stopMovement" class="button" value="Stop Enemy Movement" onclick="stopEnemyMovement()">
     <input type="button" id="increaseSpeed" class="button" value="Increase Speed" onclick="increaseSpeed()">
