--- a/public/Testing-page.html
+++ b/public/Testing-page.html
@@ -6,11 +6,19 @@
     <title>T2A11 Game Template</title>
     <style>
         body {
-            background-color: darkblue;
-        }
-        h1, h6 {
+            background: linear-gradient(135deg, #0099ff, #66ccff);
+            font-family: 'Arial', sans-serif;
+            color: #fff;
             text-align: center;
-            color: white;
+            overflow: hidden; /* Prevent scrollbars */
+        }
+        h1 {
+            font-size: 3em;
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+        }
+        h6 {
+            font-size: 1.5em;
+            margin-bottom: 20px;
         }
         /* Modal styles */
         .modal {
@@ -22,27 +30,38 @@
             width: 100%; 
             height: 100%; 
             overflow: auto; 
-            background-color: rgba(0, 0, 0, 0.4); 
+            background-color: rgba(0, 0, 0, 0.8); 
             padding-top: 100px; 
         }
         .modal-content {
-            background-color: white; 
+            background-color: #fff; 
+            color: #333;
             margin: 5% auto; 
             padding: 20px; 
-            border: 1px solid #888; 
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
             width: 80%; 
             text-align: center; 
         }
         .button {
-            background-color: #4CAF50; 
+            background-color: #ff5733; 
             color: white; 
             border: none; 
-            padding: 10px 20px; 
+            padding: 15px 25px; 
+            border-radius: 5px;
             cursor: pointer; 
             font-size: 16px; 
+            transition: background-color 0.3s;
         }
         .button:hover {
-            background-color: #45a049; 
+            background-color: #c70039; 
+        }
+        .game-elements {
+            position: relative;
+            margin: 0 auto;
+        }
+        img {
+            border-radius: 8px;
         }
     </style>
 </head>
@@ -51,7 +70,6 @@
 
     <h1>Level 1</h1>
     <h6>Version 0.0.1</h6>
-    <br><br><br><br>
 
     <!-- Modal for losing message -->
     <div id="lossModal" class="modal">
@@ -76,7 +94,6 @@
         let moveImg1 = { left: false, up: false, right: false, down: false };
         let movingEnemy = true; // Flag to control movement of myImage2 and myImage3
         let speed = 5; // Initial speed of myImage1
-        const speedIncreaseAmount = 2; // Amount to increase speed
 
         // Function to check if two elements are colliding
         function myHitOther(my1, my2) {
@@ -232,10 +249,12 @@
         };
     </script>
 
-    <img id="myImg01" style="position:absolute; width:100px; height:80px; top:0px; left:50px;" src="https://i.ibb.co/NtcGP2L/greninja.jpg" alt="Greninja">
-    <img id="myImg02" style="position:absolute; width:100px; height:80px; top:0px; left:0px;" src="https://i.ibb.co/b612Tcx/charizard.jpg" alt="Charizard">
-    <img id="myImg03" style="position:absolute; width:100px; height:80px; top:0px; left:0px;" src="https://i.ibb.co/b612Tcx/charizard.jpg" alt="Charizard">
-    <img id="myImg04" style="position:absolute; width:100px; height:80px; top:0px; left:0px;" src="https://i.ibb.co/WDXHg9m/OIP-5.jpg" alt="OIP-5">
+    <div class="game-elements">
+        <img id="myImg01" style="position: absolute; width: 100px; height: 80px; top: 0px; left: 50px;" src="https://i.ibb.co/NtcGP2L/greninja.jpg" alt="Greninja">
+        <img id="myImg02" style="position: absolute; width: 100px; height: 80px; top: 0px; left: 0px;" src="https://i.ibb.co/b612Tcx/charizard.jpg" alt="Charizard">
+        <img id="myImg03" style="position: absolute; width: 100px; height: 80px; top: 0px; left: 0px;" src="https://i.ibb.co/b612Tcx/charizard.jpg" alt="Charizard">
+        <img id="myImg04" style="position: absolute; width: 100px; height: 80px; top: 0px; left: 0px;" src="https://i.ibb.co/WDXHg9m/OIP-5.jpg" alt="OIP-5">
+    </div>
 
 </body>
 </html>
